@@ -1,17 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX stfl-0.21-python.patch 1936 RMD160 fce9de74ac0cab5abe0e9b2d53c82cad602a5be1 SHA1 1ae240823806120b94c5cda5ba96b57e289bd730 SHA256 905260dbd13b4ce374d95ced9ea5d443fc44de0f14c0f1140fc8c7cead6c1f06
+AUX stfl-0.22-soname-symlink.patch 444 RMD160 10a21f385f10695d2c19ed8b9122ba273a78edd4 SHA1 aa7aa0d2c6b92b5b0b12107ec3d9a458c8e60527 SHA256 312f0b9dd2c628531b139614d22806eec16f2587e83dc33ba28a093a3af63d38
 DIST stfl-0.21.tar.gz 41093 RMD160 d8b56cc97b4d76adba8034ce9bbae631e6e9d17e SHA1 0313eafa1fe4dcfea1f2edd34d453baaa46df277 SHA256 bf0ead0a66b635602222bc9089414b99f99081b956c92baf77699d283bcc88eb
+DIST stfl-0.22.tar.gz 41412 RMD160 d76a0ef7a86efcf7c4b25033958f161a7dcc3220 SHA1 226488be2b33867dfb233f0fa2dde2d066e494bd SHA256 2dddafd331e61ad04baf1251ccecb3a69feaf99880dd75155be8423c1cc55418
 EBUILD stfl-0.21.ebuild 2734 RMD160 d4f33d65571629944987585832bddc1c19558da4 SHA1 4a34f9cb5ca40b1d66b0ea58da18e4f5217c90c5 SHA256 1176e6dfd333d7d9c4011d99d4df346f15ac487dd08517f69cd1a585a2fd3936
-MISC ChangeLog 4989 RMD160 81f0567ae6df8b713a0a3cbdb17f1a7096080fd9 SHA1 9ede7525f4a195e0fe17a347e5b9b482cd032768 SHA256 0dfa02c3a91cee72959d36deda578d46250dab9ca6bcc3ab88ca503e389f4402
+EBUILD stfl-0.22.ebuild 2968 RMD160 cf4bce25d381d8308bc807668a40bdaa0b1892d1 SHA1 7efea4131e96606177a1d214ae205aa931f1f21b SHA256 9fcdb86946fd4ef30e00d9d64eee79e54f3c689d330e9b51c673db7b585fbc4d
+MISC ChangeLog 5167 RMD160 e243db304cd7e01cfe9fd0beda118ce04a99591a SHA1 614227a9820c8490cddcb032498ff38bd44554ab SHA256 de5654b75f162109126d334abc7cf49093d9ba2cb68cb8421a90e6caf2db97c5
 MISC metadata.xml 900 RMD160 c1bf53da4498fdeff04e9cb17e9e370541fc8d45 SHA1 fc78cd937e2970b6dafeaa57df7726f65e858f5f SHA256 b23c1d0b55c1ff86ed4397f13b8272e52efc4ac826817694c9030ca72ccd6d74
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQEIAAYFAk59C6gACgkQfXuS5UK5QB1BtgQAl1p88Kor1SY8FYZIcKvablCW
-wFiWQ8Vzi1suxK+4SFMFLvEYx73ir+M9hhmENAyuiAhnF3rxjRXMWDPKgVqUZmjr
-7C6r+ieJHauIp9UxBNlyAlDQx6Ht7KTzoJufsH0q3x49dBK1OOD/PXTrSthqJ+WC
-R3NZeHG9Jz1txa2D020=
-=SRuK
+iQEcBAEBCgAGBQJOr6GoAAoJEEqz6FtPBkyjpN4IAKl569Z+Ep1wYRK2zoMAzHlE
+YZRxgTlwxSenDAQRmiZ5zKRtEaR0zalywk+s67ET5iJnK1bwFfB9KApEzkkbIPt4
+QG+pioKiknV+EF1MHMJf0RsTHqLAXoB2F4joKqG31LgPMVTxCrmpesShvL7VRX/x
+aB2IaSAo8okbkEF0sn5vawUVskJf1GHBJLjgAZPATJH5KI4ciwdMIECmTcjRTwsA
+/Tf+xlXAd8MPh13QZexY2GYuhuIHcHKQ4ZZ+ZJrgOauhb+e67P9aReKQ650JLWlG
+xqxHHBTJNPKfM7LPZ2cXOeqCZCzvKeFGeE/GB3UgDHFzZ5W/kjDB/ebZ+c8zaZ0=
+=vRkt
 -----END PGP SIGNATURE-----
