@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/stfl
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/stfl/ChangeLog,v 1.32 2011/09/13 20:12:20 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/stfl/ChangeLog,v 1.33 2011/11/01 07:37:02 radhermit Exp $
+
+*stfl-0.22 (01 Nov 2011)
+
+  01 Nov 2011; Tim Harder <radhermit@gentoo.org> +stfl-0.22.ebuild,
+  +files/stfl-0.22-soname-symlink.patch:
+  Version bump. Add static-libs use flag.
 
   13 Sep 2011; Tim Harder <radhermit@gentoo.org> metadata.xml:
   Take over as maintainer.
